# PEQC-MLIR

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  add_license.py  build.sh  demo.sh  install-and-build.sh  peqc-mlir.py
aie-test/: notes.txt  objfifo-example.mlir  tutorial-1.mlir  tutorial-3-conversion.mlir  tutorial-3-translation.c  tutorial-3.mlir  tutorial-4-conversion.mlir  tutorial-4.mlir
demo/demo-24-10-02/: demo.sh  demo_2.c  demo_after_linalg.mlir  demo_after_linalg2.mlir  demo_after_translate.c  demo_after_translate2.c  demo_matmul.mlir  demo_matmul_bug.mlir  demo_prologue.c
demo/demo-24-10-16/: manual-parallel-trans.mlir  matmul-linalg-memref.mlir  run.sh  run_output.mlir  run_output_conversion.mlir  translation.c
docker/: Dockerfile
examples/: README.md  matmul-linalg-memref.mlir  matmul-loops-basic-generic.mlir  matmul-loops-basic.mlir  peqc-air-verif
examples/air-to-aie/: aie.mlir  air_input.mlir  air_input_ours.mlir  air_placed.mlir  air_sync.mlir  air_sync_ours.mlir  air_tiled.mlir  air_tiled_ours.mlir  aircc_decomp_aiecc.mlir  aircc_input.mlir  aircc_input_ours.mlir  generate.sh
examples/matmul/: matmul-linalg.mlir  matmul-tile-and-parallelize.mlir
experiments/polygeist-polybench/: README.md  build_and_generate.sh
include/: CMakeLists.txt  VerifAirPasses.h  VerifAirPasses.td  VerifDialect.h  VerifDialect.td  VerifOps.h  VerifOps.td  VerifPasses.h  VerifPasses.td  VerifToPast.h  VerifTypes.h  VerifTypes.td  VerifUtil.h
include/Dialect/: CMakeLists.txt  VerifDialect.h  VerifDialect.td  VerifOps.h  VerifOps.td  VerifPasses.h  VerifPasses.td  VerifTypes.h  VerifTypes.td
include/Verif/: CMakeLists.txt  VerifDialect.h  VerifDialect.td  VerifOps.h  VerifOps.td  VerifPasses.h  VerifPasses.td  VerifTypes.h  VerifTypes.td
include/convert/: AIEConverter.h
include/translate/: PastTranslator.h
lib/: CMakeLists.txt  VerifDialect.cpp  VerifOps.cpp  VerifTypes.cpp
lib/Dialect/: CMakeLists.txt  VerifDialect.cpp  VerifOps.cpp  VerifPasses.cpp  VerifTypes.cpp
lib/Translate/: CMakeLists.txt
lib/Verif/: VerifDialect.cpp  VerifOps.cpp  VerifPasses.cpp  VerifTypes.cpp
lib/convert/: CMakeLists.txt  ConvertAIE.cpp  ConvertAirChannel.cpp  ConvertAirMem.cpp  ConvertAirToAsync.cpp  ConvertAirToScfParallel.cpp  ConvertChannel.cpp  ConvertMem.cpp  ConvertMisc.cpp  ConvertObjectFifos.cpp  ConvertToAsync.cpp  ConvertToScfParallel.cpp  VerifPasses.cpp
lib/translate/: PastTranslator.cpp
script/: add_epilogue.py  peqc-mlir.py  util.py
test/: CMakeLists.txt  add_epilogue.sh  lit.cfg.py  lit.site.cfg.py.in
test/Inputs/: matmul-tiny-bug.c  matmul-tiny-epilogue.c  matmul-tiny.c
test/Verif/: dummy.mlir
test/peqc-mlir/: help.lit  matmul._mlir  verbose.lit
test/verif/: verif-opt-air.mlir  verif-opt.mlir  verif-pass-plugin.mlir  verif-plugin.mlir  verif-translate.mlir
tools/: CMakeLists.txt
tools/verif-lsp-server/: CMakeLists.txt  verif-lsp-server.cpp
tools/verif-opt/: verif-opt.cpp
tools/verif-plugin/: CMakeLists.txt
tools/verif-translate/: CMakeLists.txt  verif-translate.cpp
verif-opt/: CMakeLists.txt  verif-opt.cpp
verif-plugin/: CMakeLists.txt  verif-plugin.cpp
verif-translate/: CMakeLists.txt  interp_macros.h  prologue.h  verif-translate.cpp
verif-translate/include/: interp_macros.h
verif-translate/scripts/: add_epilogue.sh  interp_macros.h  interp_macros_seq.h
(+3794 files in other folders)
